@@ -27,8 +27,9 @@
   and instead compare it with other games you've played. It's all relative, after all.
  </dd><dt>External links</dt><dd>
   Links to external resources about this visual novel. To get the URLs, go to the
-  sites (<a href="http://en.wikipedia.org/">Wikipedia</a> and <a href="http://visual-novels.net/">
-  Visual-novels.net</a>),
+  sites (<a href="http://en.wikipedia.org/">Wikipedia</a>, <a href="http://novelnews.net/">
+  Novelnews.net</a>, <a href="http://renai.us/">Renai.us</a> and
+  <a href="http://visual-novels.net/">Visual-novels.net</a>),
   search for a page about the game, and determine the ID or name of that page to fill
   out in the text boxes. Do not specify the full URL, we only need a small part of
   it!
