@@ -19,6 +19,7 @@ TODO:
 	- Dynamic loading, several bugfixes, and code cleanup for Multi
 	- Added 'School Life' category
 	- Added GTIN field to releases
+	- Added links to encubed and renai.us
 
 1.16 - 2008-05-22
 	- Release dates in the current year or month without a specified day will
